--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -4,4 +4,38 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: Impact, Charcoal, sans-serif;
+}
+
+.Login input {
+    border-radius: 15px;
+    padding: 5px 5px;
+}
+
+.loginTitle {
+    font-size: x-large;
+    font-weight: 400;
+}
+
+.Login h2 {
+    font-size: large;
+    font-weight: 200;
+    margin-bottom: 5px;
+}
+
+.Login button {
+    margin-top: 20px;
+    border-radius: 15px;
+    text-transform: uppercase;
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 20px;
+    background-color: aquamarine;
+    padding: 5px 10px;
+    border-bottom: 6px solid black;
+    transition: all 0.5s ease-out;
+}
+
+.Login button:hover {
+    border-bottom: 2px solid black;
+    text-shadow: none;
 }
