--- a/src/CSS/NavMenu.css
+++ b/src/CSS/NavMenu.css
@@ -1,24 +1,37 @@
-.NavMenu{
+.NavMenu {
     height: 100%;
     background-color: aquamarine;
     width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    transition: all 1s ease-in;
+    transition: all .7s ease-in;
     position: absolute;
     left: 0;
+    border-right: 1px solid black;
+    text-align: center;
 }
 
-.NavMenu.open{
+.NavMenu button {
+    position: absolute;
+    bottom: 10px;
+}
+
+.NavMenu h1 {
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
+.NavMenu.open {
     transform: translateX(0);
 }
 
-.NavMenu.close{
+.NavMenu.close {
     transform: translateX(-100%);
 }
 
-.navList{
+.navList {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,4 +48,10 @@
     width: 100%;
     text-align: center;
     margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.navList a:hover {
+    opacity: 60%;
 }
