--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -4,3 +4,19 @@
     flex-direction: column;
     font-family: Impact, Charcoal, sans-serif;
 }
+
+.Main button {
+    border-radius: 15px;
+    text-transform: uppercase;
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 20px;
+    background-color: white;
+    padding: 5px 10px;
+    border-bottom: 6px solid black;
+    transition: all 0.5s ease-out;
+}
+
+.Main button:hover {
+    border-bottom: 2px solid black;
+    text-shadow: none;
+}
