Изменения толщины шрифта у главного заголовка

--- a/src/CSS/NavMenu.css
+++ b/src/CSS/NavMenu.css
@@ -21,6 +21,7 @@
     color: white;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
+    font-weight: 500;
 }
 
 .NavMenu.open {
